--- a/_includes/share-buttons.html
+++ b/_includes/share-buttons.html
@@ -6,7 +6,7 @@
     </a>
     <a class="button is-medium is-twitter"
        onclick="window.open('https://twitter.com/intent/tweet?text={{ site.url }}{{ page.url | prepend: site.baseurl }}');">
-        <span class="icon"><i class="fab fa-twitter fa-lg"></i></span>
+        <span class="icon"><i class="fab fa-x-twitter fa-lg"></i></span>
     </a>
     <a class="button is-medium is-linkedin"
        onclick="window.open('https://www.linkedin.com/shareArticle?mini=true&url={{ site.url }}{{ page.url | prepend: site.baseurl }}&title={{ page.title | url_encode }}&summary=&source=');">
