--- a/_includes/share-buttons.html
+++ b/_includes/share-buttons.html
@@ -5,7 +5,7 @@
         <span class="icon"><i class="fab fa-facebook fa-lg"></i></span>
     </a>
     <a class="button is-medium is-twitter"
-       onclick="window.open('https://twitter.com/intent/tweet?text={{ site.url }}{{ page.url | prepend: site.baseurl }}');">
+       onclick="window.open('https://x.com/intent/tweet?text={{ site.url }}{{ page.url | prepend: site.baseurl }}');">
         <span class="icon"><i class="fab fa-x-twitter fa-lg"></i></span>
     </a>
     <a class="button is-medium is-linkedin"
