the icon for download/link changed.

--- a/_includes/programs.html
+++ b/_includes/programs.html
@@ -32,7 +32,7 @@
                             </a>
                             {% else %}
                             <a href="{{ slide.link }}">
-                                <img src="{{ site.baseurl }}/img/web-link.png" />
+                                <img src="{{ site.baseurl }}/img/download.png" />
                             </a>
                             {% endif %}                        
                         {% endfor %}
